--- a/style.css
+++ b/style.css
@@ -1,72 +1,93 @@
+/* Start Main Rule */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+* {
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-image:url("wall.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position:top;
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+}   
+.overlay{
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background:rgba(0,0,0,0.4);
+  width:100%;
+  height:100%;
+  z-index:-1;
 }
-
-@font-face {
-  font-family: nazanin;
-  src: url(B-NAZANIN.TTF);
+.countdown-container{
+  display:flex;
 }
-
-h1 {
+.big-text{
+  font-size:4rem;
+}
+.title{
+  margin:10px;
+  text-align:center;
+  color:#fff;
+  width:100%;
+  letter-spacing:2px;
+  font-size: 3rem;
+  line-height: 5.5rem;
+}
+.title span{
+  display:block;
+  font-size:6rem;
+  letter-spacing:2rem;
+}
+.wrapper{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-wrap: wrap;
+  min-height:100vh;
+}
+.countdown-container > div{
+  margin:0 2rem;
   text-align: center;
-  font-family: nazanin;
-  font-size: 2em;
+  border:2px solid #fff;
+  padding:0px 20px;
+  border-radius: 12px;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
+  box-sizing: border-box;
+  color:#fff;
+  min-width:150px;
 }
-h2 {
-  text-align: center;
-  font-family: nazanin;
-  font-size: 1.2em;
+@media (max-width:992px){
+  .countdown-container > div{
+    margin:0 1rem;
+  }
 }
-
-form {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  font-family: nazanin;
-}
-
-label {
-  font-weight: bold;
-  font-family: nazanin;
-  font-size: 1.5em;
-}
-
-input[type="number"] {
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  font-family: nazanin;
-  font-size: 1.2em;
+@media (max-width:767px){
+  .countdown-container{
+    flex-wrap: wrap;
+  }
+  .countdown-container > div{
+    margin:1rem auto;
+    max-width:150px;
+  }
+  .title{
+    font-size: 1.5rem;
+    line-height: 3.5rem;
+    margin:10px 0px;
+  }
+  .title span{
+    font-size: 2rem;
+    letter-spacing: 1rem;
+  }
 }
 
-button[type="submit"] {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: nazanin;
-  font-size: 1.5em;
-}
-
-button[type="submit"]:hover {
-  background-color: #0056b3;
-  font-family: nazanin;
-  font-size: 1.5em;
-}
-
-p#result {
-  text-align: center;
-  font-size: 1.5em;
-  margin-top: 20px;
-  font-family: nazanin;
-}
+  
