--- a/all.css
+++ b/all.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background: url(../img/background.png);
+    background: url(./background.png);
     background-size: cover;
     margin: 0vw;
     animation: fadein 1s;
